--- a/src/css-styling/sign-up.module.css
+++ b/src/css-styling/sign-up.module.css
@@ -16,14 +16,14 @@
 
 
 .scrollableWrapper {
-    /* height: 100vh;
+    height: 100vh;
     padding-top: 300px; 
     padding-bottom: 400px;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    -webkit-overflow-scrolling: touch;  */
+    -webkit-overflow-scrolling: touch;  
   }
   
   .formContainer {
