--- a/src/css-styling/CocktailForm.module.css
+++ b/src/css-styling/CocktailForm.module.css
@@ -27,12 +27,12 @@
 
 .formTitle {
   color: #e8d9c5;
-    text-align: center;
-    font-size: 2.2rem;
-    margin-bottom: 40px;
-    font-family: serif; 
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    letter-spacing: 1px;
+  text-align: center;
+  font-size: 2.2rem;
+  margin-bottom: 40px;
+  font-family: sans-serif; 
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  letter-spacing: 1px;
 }
 
 .formGroup {
@@ -105,7 +105,7 @@
 
 .nameRow .textarea {
   width: 100%;
-  min-height: 60px; /* Adjust based on your needs */
+  min-height: 60px;
 }
 
 .measurementRow {
@@ -197,7 +197,6 @@
   cursor: not-allowed;
 }
 
-/* Responsive styles */
 @media screen and (max-width: 768px) {
   .formContainer {
     margin: 90px auto 30px;
