--- a/src/css-styling/SearchBar.module.css
+++ b/src/css-styling/SearchBar.module.css
@@ -6,20 +6,20 @@
 } */
 
 .searchBarContainer {
-    width: 100%;
+    width: 40%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 150px auto;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin: auto auto 100px;
     
 }
 
 .input {
     width: 100%;
-    height: 100%;
+    height: 40px;
     padding: 10px;
     border: 2px solid #ccc;
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 0 0 5px;
     box-shadow: 0px 0px 8px #8d8d8d;
 
 }
